[package]
name = "blog-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono", "migrate"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
